GNOME Bugzilla – Bug 683752
Quote the use of file type descriptions in error messages
Last modified: 2012-09-13 15:58:17 UTC
See patch.
Created attachment 223962 [details] [review] Quote the use of file type descriptions in error messages So that we don't have things like: "There is no application installed for backup file files."
Review of attachment 223962 [details] [review]: Sure; I will ask a string freeze break for this.
Review of attachment 223962 [details] [review]: Freeze break granted, feel free to push.