Quote the use of file type descriptions in error messages

So that we don't have things like:
"There is no application installed for backup file files."

https://bugzilla.gnome.org/show_bug.cgi?id=683752